syntax = "proto3";
option java_multiple_files = true;
package vn.com.hugio.grpc.product;
import "common.proto";

service ProductService {
  rpc getProductDetail (RequestTypeProductInfoInput) returns (ResponseTypeProductInfoOutput) {}
}

message ProductInfoInput {
  string uid = 1;
}

message RequestTypeProductInfoInput {
  vn.com.hugio.grpc.common.TraceTypeGRPC trace = 1;
  oneof input {
    ProductInfoInput request = 2;
  }
}

message ProductInfoOutput {
  int64 id = 1;
  string productUid = 2;
  string productName = 3;
  string rawProductName = 4;
  double price = 5;
  double discount = 6;
  string productDescription = 7;
}

message ResponseTypeProductInfoOutput {
  vn.com.hugio.grpc.common.TraceTypeGRPC trace = 1;
  string code = 2;
  string message = 3;
  oneof output{
    ProductInfoOutput response = 4;
  }
}
